--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "antd": "^3.15.2",
+    "mongodb": "^3.2.2",
+    "mongoose": "^5.4.21",
+    "mongoose-auto-increment": "^5.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
